grabdish/order-helidon/order-helidon-deployment.yaml

##
## Copyright (c) 2021 Oracle and/or its affiliates.
## Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-helidon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
        version: helidon-mp
    spec:
      containers:
      - name: promtail-container
        image: grafana/promtail
        args:
          - -log.level=debug
            #            - --stdin
            #            - --dry-run
            #            - --inspect
          - -config.file=/etc/promtail/promtail.yaml
#        volumeMounts:
#          - name: logs
#            mountPath: /var/log/alert.log
#            subPath: alert.log
#          - name: promtail-config
#            mountPath: /etc/promtail
      - name: order
        image: %DOCKER_REGISTRY%/order-helidon:0.1
        imagePullPolicy: Always
        volumeMounts:
        - name: creds
          mountPath: /msdataworkshop/creds
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet: #alternatives include exec with command, etc.
            path: /health/live
            port: 8080
          initialDelaySeconds: 220
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 8080
          initialDelaySeconds: 40
          periodSeconds: 3
      restartPolicy: Always
      volumes:
      - name: creds
        secret:
          secretName: db-wallet-secret
