grabdish/order-helidon/ext_order_service.yaml

##
## Copyright (c) 2021 Oracle and/or its affiliates.
## Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl/apiVersion: v1
kind: Service
metadata:
  name: ext-order
  labels:
    app: order
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    name: http
  selector:
    app: order
