grabdish/order-helidon/order-service.yaml
## Copyright (c) 2021 Oracle and/or its affiliates.
## Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl/
apiVersion: v1
kind: Service
metadata:
  name: order
  labels:
    app: order
#    operated-prometheus: true
    release: stable
spec:
  type: NodePort
  ports:
  - port: 8080
    name: http
    targetPort: 8080
  - port: 9090
    name: metrics
    targetPort: 9090
  selector:
    app: order
