grabdish/order-helidon/ext-order-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grabdish-ext-order-ingress
  namespace: msdataworkshop
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-rewrite-log: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
    #nginx.ingress.kubernetes.io/backend-protocol: "https"
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  tls:
  - secretName: ssl-certificate-secret
  rules:
  - http:
      paths:
      - path: /ext-order
        pathType: Prefix
        backend:
          service:
            name: order
            port:
              number: 8080
